--- a/src/main/resources/com/example/workoutapp/login.fxml
+++ b/src/main/resources/com/example/workoutapp/login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,7 +14,7 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body" stylesheets="@styles/login.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.workoutapp.LoginController">
     <VBox layoutX="-3.0" layoutY="-2.0" prefHeight="400.0" prefWidth="200.0" styleClass="logoContainer" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <ImageView fitHeight="150.0" fitWidth="200.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/barbell.png"/>
+            <Image url="@images/barbell.png" />
         </ImageView>
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Workout Log" />
     </VBox>
@@ -23,32 +24,28 @@
                 <Insets bottom="4.0" left="4.0" top="20.0" />
             </VBox.margin>
         </Text>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subHeader" text="Enter your username and password below.">
-            <VBox.margin>
-                <Insets bottom="20.0" left="4.0" />
-            </VBox.margin>
-        </Text>
-        <Label fx:id="usernameLabel" text="Username:">
+      <Label fx:id="loginMessageLabel" />
+        <Label text="Username:">
             <VBox.margin>
                 <Insets left="4.0" />
             </VBox.margin>
         </Label>
-        <TextField fx:id="usernameTextfield">
+        <TextField fx:id="usernameTextField">
             <VBox.margin>
                 <Insets left="4.0" right="4.0" />
             </VBox.margin>
         </TextField>
-        <Label fx:id="passwordLabel" text="Password:">
+        <Label text="Password:">
             <VBox.margin>
                 <Insets left="4.0" />
             </VBox.margin>
         </Label>
-        <TextField fx:id="passwordTextfield">
-            <VBox.margin>
-                <Insets left="4.0" right="4.0" />
-            </VBox.margin>
-        </TextField>
-        <Button fx:id="loginBtn" mnemonicParsing="false" text="Login">
+      <PasswordField fx:id="passwordPasswordField">
+         <VBox.margin>
+            <Insets left="4.0" right="4.0" />
+         </VBox.margin>
+      </PasswordField>
+        <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#loginBtnOnAction" text="Login">
             <VBox.margin>
                 <Insets left="4.0" top="20.0" />
             </VBox.margin>
