--- a/src/main/resources/com/example/workoutapp/workouts.fxml
+++ b/src/main/resources/com/example/workoutapp/workouts.fxml
@@ -18,13 +18,13 @@
          <children>
             <VBox prefHeight="600.0" prefWidth="500.0" styleClass="workoutHistoryContainer">
                <children>
-                  <TableView prefHeight="600.0" prefWidth="500.0" styleClass="workoutHistoryTable">
+                  <TableView fx:id="exerciseTable" prefHeight="600.0" prefWidth="500.0" styleClass="workoutHistoryTable">
                     <columns>
-                      <TableColumn prefWidth="150.0" styleClass="tableColumn" text="Exercise" />
-                        <TableColumn prefWidth="75.0" styleClass="tableColumn" text="Weight" />
-                      <TableColumn prefWidth="55.0" styleClass="tableColumn" text="Sets" />
-                        <TableColumn prefWidth="55.0" styleClass="tableColumn" text="Reps" />
-                        <TableColumn prefWidth="100.0" styleClass="tableColumn" text="Date" />
+                      <TableColumn fx:id="exerciseCol" prefWidth="150.0" styleClass="tableColumn" text="Exercise" />
+                        <TableColumn fx:id="weightCol" prefWidth="75.0" styleClass="tableColumn" text="Weight" />
+                      <TableColumn fx:id="setsCol" prefWidth="55.0" styleClass="tableColumn" text="Sets" />
+                        <TableColumn fx:id="repsCol" prefWidth="55.0" styleClass="tableColumn" text="Reps" />
+                        <TableColumn fx:id="dateCol" prefWidth="100.0" styleClass="tableColumn" text="Date" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
