--- a/src/main/resources/com/example/workoutapp/workouts.fxml
+++ b/src/main/resources/com/example/workoutapp/workouts.fxml
@@ -33,7 +33,7 @@
                </children></VBox>
             <VBox alignment="CENTER" prefHeight="600.0" prefWidth="400.0" styleClass="workoutSelectionContainer">
                <children>
-                  <Label alignment="CENTER" prefWidth="350.0" text="What exercises have you done?" textAlignment="CENTER">
+                  <Label alignment="CENTER" prefWidth="350.0" text="What entries have you done?" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="50.0" />
                      </VBox.margin>
@@ -53,7 +53,7 @@
                         <TextField fx:id="repsTextField" alignment="CENTER" promptText="Reps" />
                      </children>
                   </HBox>
-                  <Button fx:id="addBtn" alignment="CENTER" mnemonicParsing="false" prefWidth="305.0" text="Add exercise" />
+                  <Button fx:id="addBtn" alignment="CENTER" mnemonicParsing="false" prefWidth="305.0" text="Add entry" />
                </children>
             </VBox>
          </children>
