--- a/src/main/resources/com/example/workoutapp/workouts.fxml
+++ b/src/main/resources/com/example/workoutapp/workouts.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -41,7 +41,7 @@
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <MenuButton fx:id="exerciseDropDown" mnemonicParsing="false" prefHeight="6.0" prefWidth="305.0" text="Exercise" />
+                  <ComboBox fx:id="exerciseDropDown" prefWidth="305.0" promptText="Exercises" />
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="350.0" styleClass="exerciseSelectionContainer">
                      <children>
                         <TextField fx:id="weightTextField" alignment="CENTER" promptText="Weight">
