--- a/src/main/resources/com/example/workoutapp/login.fxml
+++ b/src/main/resources/com/example/workoutapp/login.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body" stylesheets="@styles/login.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.workoutapp.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body" stylesheets="@styles/login.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.workoutapp.LoginController">
     <VBox layoutX="-3.0" layoutY="-2.0" prefHeight="400.0" prefWidth="200.0" styleClass="logoContainer" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <ImageView fitHeight="150.0" fitWidth="200.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
             <Image url="@images/barbell.png" />
@@ -30,7 +25,7 @@
                 <Insets left="4.0" />
             </VBox.margin>
         </Label>
-        <TextField fx:id="usernameTextField">
+        <TextField id="usernameTextField" fx:id="usernameTextField">
             <VBox.margin>
                 <Insets left="4.0" right="4.0" />
             </VBox.margin>
@@ -40,12 +35,12 @@
                 <Insets left="4.0" />
             </VBox.margin>
         </Label>
-      <PasswordField fx:id="passwordPasswordField">
+      <PasswordField id="passwordTextField" fx:id="passwordPasswordField">
          <VBox.margin>
             <Insets left="4.0" right="4.0" />
          </VBox.margin>
       </PasswordField>
-        <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#loginBtnOnAction" text="Login">
+        <Button id="loginBtn" fx:id="loginBtn" mnemonicParsing="false" onAction="#loginBtnOnAction" text="Login">
             <VBox.margin>
                 <Insets left="4.0" top="20.0" />
             </VBox.margin>
